Changed background for folder view and gallary Did some spacing fix for navbar

--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -20,7 +20,7 @@
     }
 
     .file_label {
-        @apply border border-light-purple px-2 py-1.5 rounded-md cursor-pointer text-sm md:text-xl;
+        @apply border border-light-purple px-2 py-1.5 rounded-md cursor-pointer text-sm md:text-xl text-white;
     }
 
 
